# production-rag-pipeline

./: README.md  pyproject.toml
src/production_rag_pipeline/: __init__.py  __main__.py  rag_pipeline.py
tests/: test_rag_pipeline.py
